Py: bs4 with html5lib parser

--- a/Py/14Web/01WebScraping_BeautifulSoup/bs4.ipynb
+++ b/Py/14Web/01WebScraping_BeautifulSoup/bs4.ipynb
@@ -37,12 +37,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import bs4\n",
-    "import requests"
+    "import requests\n",
+    "import html5lib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "url = 'https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_and_their_capitals_in_native_languages'\n",
+    "res = requests.get(url)\n",
+    "res"
    ]
   },
   {
@@ -54,7 +77,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "bs4.BeautifulSoup"
       ]
      },
      "metadata": {},
@@ -62,30 +85,9 @@
     }
    ],
    "source": [
-    "url = 'https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_and_their_capitals_in_native_languages'\n",
-    "res = requests.get(url)\n",
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "bs4.BeautifulSoup"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
-   "source": [
     "text = res.content\n",
-    "soup = bs4.BeautifulSoup(text) # full web c\n",
+    "# soup = bs4.BeautifulSoup(text) # full web c\n",
+    "soup = bs4.BeautifulSoup(text, 'html5lib')\n",
     "type(soup)"
    ]
   },
