--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -27,22 +27,54 @@
   {
    "source": [
     "# LIST\n",
-    "\n",
-    "### Indexing/Slicing of List works same as String\n"
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Example"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1\n6\n[2, 3, 4, 5]\n[5, 2, 3, 4, 5, 6]\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n[0, 4, 16, 36, 64, 100, 144, 196, 256, 324]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ex\n",
+    "print(list(range(10)))\n",
+    "print([i**2 for i in range(20) if i % 2 == 0])"
+   ]
+  },
+  {
+   "source": [
+    "## Indexing/Slicing of List works same as String"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n6\n[2, 3, 4, 5]\n[1, 3, 5]\n[5, 2, 3, 4, 5, 6]\n"
      ]
     }
    ],
@@ -53,33 +85,15 @@
     "print(l[0])\n",
     "print(l[-1])\n",
     "print(l[1:-1])\n",
-    "\n",
+    "print(l[::2])\n",
     "# because of mutable property\n",
     "l[0] = 5\n",
     "print(l)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
-     ]
-    }
-   ],
    "source": [
-    "numbers = list(range(20))\n",
-    "print(numbers[::2])"
-   ]
-  },
-  {
-   "source": [
-    "### Unpacking Operator"
+    "## Unpacking Operator"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -120,7 +134,7 @@
   },
   {
    "source": [
-    "### iteration"
+    "## iteration"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -141,6 +155,7 @@
    "source": [
     "programming_lan= [\"Java\",\"C\",\"C++\",\"Kotlin\",\"TypeScript\"]\n",
     "\n",
+    "# List Membership Test\n",
     "v = \"C\" in programming_lan\n",
     "print(v)\n",
     "\n",
@@ -176,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[5, 2, 3, 4, 5, 6, 33]\n[5, 10, 2, 3, 4, 5, 6, 33]\n"
+      "['', 10, 'A', '', 'B', '', 'C', 33, 33]\n['', 10, 10, 'A', '', 'B', '', 'C', 33, 33]\n[2, 3, 5, 7]\n[2, 3, 5, 7, 9, 7, 5]\n['re', 're', 're']\n"
      ]
     }
    ],
@@ -193,7 +208,16 @@
     "print(l)\n",
     "# insert 10 at index 1\n",
     "l.insert(1,10)\n",
-    "print(l)\n"
+    "print(l)\n",
+    "\n",
+    "odd = [2, 4, 6, 8]\n",
+    "# change 2nd to 4th items\n",
+    "odd[1:4] = [3, 5, 7]  \n",
+    "print(odd)\n",
+    "\n",
+    "# Concatenating and repeating lists\n",
+    "print(odd + [9, 7, 5])\n",
+    "print([\"re\"] * 3)\n"
    ]
   },
   {
@@ -527,6 +551,104 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2, 4, 6, 8]\n\n['A', 'B', 'C']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l =[1,2,3,4,5,6,7,8]\n",
+    "# filtering even elements\n",
+    "filtered = [i for i in l if i % 2==0]\n",
+    "print(filtered)\n",
+    "\n",
+    "print()\n",
+    "# removing empty string from the list\n",
+    "l =[\"\",\"A\",\"\",\"B\",\"\",\"C\"]\n",
+    "removed = [i for i in l if i]\n",
+    "print(removed) "
+   ]
+  },
+  {
+   "source": [
+    "### Using with String"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[['maNgo'], ['BanAna'], ['PytHoN', 'iS', 'Love'], ['Cat', 'iS', 'not', 'doG']]\n['maNgo', 'BanAna', 'PytHoN', 'iS', 'Love', 'Cat', 'iS', 'not', 'doG']\n['Mango', 'Banana', 'Python', 'Is', 'Love', 'Cat', 'Is', 'Not', 'Dog']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "list_string = ['maNgo', 'BanAna', 'PytHoN iS Love', 'Cat iS not doG']\n",
+    "\n",
+    "# make the list of string to list of list of words\n",
+    "list_of_list = [sentence.split() for sentence in list_string]\n",
+    "print(list_of_list)\n",
+    "\n",
+    "words = sum(list_of_list, [])  # make the list of list to a single list\n",
+    "print(words)  # print the list of word\n",
+    "\n",
+    "# modify the case\n",
+    "correct_case = [str.upper(word[0])+str.lower(word[1:]) for word in words if len(word) > 1]\n",
+    "\n",
+    "# print the list of word with desired case\n",
+    "print(correct_case)"
+   ]
+  },
+  {
+   "source": [
+    "### Making Nested List Comprehension\n",
+    "\n",
+    "However, you can also use nested List comprehension. That means, you can use a list comprehension inside another list comprehension. For example, the previous example code can be written shorter using nested Python list Comprehension. Like this,"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Mango', 'Banana', 'Python', 'Is', 'Love', 'Cat', 'Is', 'Not', 'Dog']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "list_string = ['maNgo', 'BanAna', 'PytHoN iS Love', 'Cat iS not doG']\n",
+    "\n",
+    "correct_case = [str.upper(word[0])+str.lower(word[1:])\n",
+    "                for word in sum([sentence.split() for sentence in list_string], [])\n",
+    "                if len(word) > 1]\n",
+    "\n",
+    "# print the list of word with desired case\n",
+    "print(correct_case)"
+   ]
+  },
+  {
    "source": [
     "### Replacing Map and Filter function with list comprehension"
    ],
@@ -535,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
