--- a/Py/06dictionaries/dictionaries.ipynb
+++ b/Py/06dictionaries/dictionaries.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 1
+     "execution_count": 14
     }
    ],
    "source": [
@@ -69,9 +69,20 @@
    ]
   },
   {
+   "source": [
+    "## accessing elements"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "print(user_info['name'])\n",
+    "print(user_info['age'])"
+   ],
    "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
+   "execution_count": 15,
    "outputs": [
     {
      "output_type": "stream",
@@ -80,11 +91,6 @@
       "Soikat\n69\n"
      ]
     }
-   ],
-   "source": [
-    "# accessing elements\n",
-    "print(user_info['name'])\n",
-    "print(user_info['age'])"
    ]
   },
   {
@@ -134,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +170,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 3
     }
    ],
    "source": [
@@ -215,6 +221,13 @@
    ]
   },
   {
+   "source": [
+    "## iterate"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -228,7 +241,6 @@
     }
    ],
    "source": [
-    "# iterate\n",
     "for k,v in user_info.items():\n",
     "    print(k,\" : \",v)\n",
     "\n",
@@ -237,6 +249,13 @@
     "for k in user_info:\n",
     "    print(k,\" : \",user_info[k])"
    ]
+  },
+  {
+   "source": [
+    "## delete element"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -252,7 +271,6 @@
     }
    ],
    "source": [
-    "# delete key with value\n",
     "deleted_value = user_info.pop('hobby')\n",
     "print(deleted_value)\n",
     "print(user_info)\n",
@@ -289,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[0, 2, 4, 6, 8]\n[0, 2, 4, 6]\n\n{0: 0, 1: 2, 2: 4, 3: 6}\n"
+      "[0, 2, 4, 6, 8]\n[0, 2, 4, 6]\n\n{0: 0, 1: 2, 2: 4, 3: 6}\n['Jhon', 'pass', 191]\n['name', 'pass', 'id']\nname-pass-id\n"
      ]
     }
    ],
@@ -306,18 +324,31 @@
     "    values.append(x*2)\n",
     "print(values)\n",
     "\n",
-    "# using list comprehensions:\n",
+    "# generate list using list comprehensions:\n",
     "values = [x*2 for x in range(4)]\n",
     "print(values)\n",
     "\n",
     "print()\n",
     "\n",
-    "# dict comprehensions:\n",
+    "# generate dict with  dict comprehensions:\n",
     "# values = {}\n",
     "# for x in range(5):\n",
     "#     values[x] = x*2\n",
     "values = {x: x*2 for x in range(4)}\n",
-    "print(values)"
+    "print(values)\n",
+    "\n",
+    "d= {\n",
+    "    \"name\":\"Jhon\",\n",
+    "    \"pass\":\"pass\",\n",
+    "    \"id\":191\n",
+    "}\n",
+    "values = [d[key] for key in d]\n",
+    "keys = [key for key in d]\n",
+    "keys_str = \"-\".join([key for key in d]) \n",
+    "\n",
+    "print(values)\n",
+    "print(keys)\n",
+    "print(keys_str)"
    ]
   },
   {
