--- a/Py/09OOP/py_oop_basic.ipynb
+++ b/Py/09OOP/py_oop_basic.ipynb
@@ -33,6 +33,8 @@
   },
   {
    "source": [
+    "## Basics\n",
+    "\n",
     "**Definig the constructor of a Class**\n",
     "\n",
     "- A constructor is a special member function of a class that is executed whenever we create new objects of the class.\n",
@@ -55,9 +57,338 @@
     "\n",
     "- Class Variables are common to all instances\n",
     "- They are associated with the class\n",
-    "- Accessed by `class_name.variable`\n",
+    "- Accessed by `class_name.variable`\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Human():\n",
     "\n",
-    "**Magic Functions**\n",
+    "    # class variable\n",
+    "    database = []\n",
+    "    population = 0\n",
+    "    id_seq = 0\n",
+    "\n",
+    "    # constructor\n",
+    "    def __init__(self,name,age,is_alive = True):\n",
+    "        # instance variables\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.is_alive = is_alive\n",
+    "        # \n",
+    "        self.id = Human.id_seq\n",
+    "        Human.id_seq += 1\n",
+    "        Human.population += 1\n",
+    "        Human.database.append(self)\n",
+    "\n",
+    "    # instance methods\n",
+    "    def intro(self):\n",
+    "        print(\"Hi, My name is\",self.name,\"My age is\",self.age)\n",
+    "    \n",
+    "    def die(self):\n",
+    "        if self.is_alive:\n",
+    "            print(self.name, \"is dying\")\n",
+    "            self.is_alive = False\n",
+    "            Human.population -= 1\n",
+    "        else:\n",
+    "            print(\"{} is already dead\".format(self.name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h1 = Human(\"soikat\",22)\n",
+    "h2 = Human(\"Jhon\",69)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Hi, My name is soikat My age is 22\nHi, My name is Jhon My age is 69\n"
+     ]
+    }
+   ],
+   "source": [
+    "h1.intro()\n",
+    "h2.intro()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n2\n2\n2\nsoikat\nJhon\n"
+     ]
+    }
+   ],
+   "source": [
+    "# class variables:\n",
+    "print(Human.population)\n",
+    "print(Human.id_seq)\n",
+    "\n",
+    "# class variable is common for all\n",
+    "print(h1.population)\n",
+    "print(h2.population)\n",
+    "# instance variable is not\n",
+    "print(h1.name)\n",
+    "print(h2.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
+   "source": [
+    "h1.is_alive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "soikat is dying\n"
+     ]
+    }
+   ],
+   "source": [
+    "h1.die()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "h1.is_alive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "soikat is already dead\n"
+     ]
+    }
+   ],
+   "source": [
+    "h1.die()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "Human.population"
+   ]
+  },
+  {
+   "source": [
+    "### Private members"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FrqCounter():\n",
+    "    def __init__(self):\n",
+    "        self.d = {}\n",
+    "    \n",
+    "    def add(self,v):\n",
+    "        self.d[v.lower()] = self.d.get(v.lower(),0) + 1\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"FC ({self.d})\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "FC ({'python': 10, 'c++': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "fcnt = FrqCounter()\n",
+    "fcnt.add(\"python\")\n",
+    "fcnt.add(\"Python\")\n",
+    "fcnt.add(\"C++\")\n",
+    "fcnt.d[\"python\"] = 10 # but direct access should not be allowed\n",
+    "print(fcnt)\n"
+   ]
+  },
+  {
+   "source": [
+    "> making 'd' private"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FrqCounter():\n",
+    "    def __init__(self):\n",
+    "        self.__d = {}\n",
+    "    \n",
+    "    def add(self,v):\n",
+    "        self.__d[v.lower()] = self.__d.get(v.lower(),0) + 1\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"FC ({self.d})\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'FrqCounter' object has no attribute 'd'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-47-1eebd60a5344>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mfcnt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Python\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mfcnt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"C++\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mfcnt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"python\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m \u001b[1;31m# AttributeError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfcnt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# AttributeError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfcnt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__d\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# AttributeError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'FrqCounter' object has no attribute 'd'"
+     ]
+    }
+   ],
+   "source": [
+    "fcnt = FrqCounter()\n",
+    "fcnt.add(\"python\")\n",
+    "fcnt.add(\"Python\")\n",
+    "fcnt.add(\"C++\")\n",
+    "fcnt.d[\"python\"] = 10 # AttributeError\n",
+    "print(fcnt.d) # AttributeError\n",
+    "print(fcnt.__d) # AttributeError"
+   ]
+  },
+  {
+   "source": [
+    "#### force accessing private methods using `__dict__`"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'_FrqCounter__d': {'python': 2, 'c++': 1}}\n"
+     ]
+    }
+   ],
+   "source": [
+    " print(fcnt.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'python': 2, 'c++': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fcnt._FrqCounter__d)"
+   ]
+  },
+  {
+   "source": [
+    "## Magic Methods\n",
     "\n",
     "- they are called automatically when some particular event occur\n",
     "\n",
@@ -68,7 +399,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<__main__.Human object at 0x0000020FF9D60790>\n[<__main__.Human object at 0x0000020FF9D60790>, <__main__.Human object at 0x0000020FF9D60430>]\n<__main__.Human object at 0x0000020FF9D60790>\nJhon\n"
+     ]
+    }
+   ],
+   "source": [
+    "# before overriding __repr__ magic function\n",
+    "print(h1)\n",
+    "print(Human.database)\n",
+    "print(Human.database[0])\n",
+    "print(Human.database[1].name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,199 +455,168 @@
     "        else:\n",
     "            print(\"{} is already dead\".format(self.name))\n",
     "    \n",
-    "    # Magic Function -> overriding __repr__ (toString equivalent)\n",
-    "\n",
+    "    # __repr__ is a special method used to represent a class’s objects as a string\n",
     "    def __repr__(self):\n",
-    "        \"\"\"\n",
-    "            represents the object...prints object\n",
-    "        \"\"\"\n",
-    "        return \"[{}, {}, {}, {}]\".format(self.id,self.name,self.age,self.is_alive)\n",
-    "\n",
-    "\n"
+    "        return \"%s(%r)\" % (self.__class__, self.__dict__)\n",
+    "    # The __str__ method in Python represents the class objects as a string. The __str__ method is\n",
+    "    # called when the following functions are invoked on the object and return a string: print(), str()\n",
+    "    def __str__(self):\n",
+    "        return f\"Human [{self.id}, {self.name}, {self.age}, {self.is_alive}]\"\n",
+    "    #  `__repr__` vs `__str__`: __repr__ is for developers, __str__ is for customers.\n",
+    "    # If we have not defined the __str__, then it will call the __repr__ method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h1 = Human(\"soikat\",22)\n",
-    "h2 = Human(\"Jhon\",69)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Hi, My name is soikat My age is 22\nHi, My name is Jhon My age is 69\n"
-     ]
-    }
-   ],
-   "source": [
-    "h1.intro()\n",
-    "h2.intro()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2\n2\n[<__main__.Human object at 0x000002294D374A00>, <__main__.Human object at 0x000002294D374E20>]\n<__main__.Human object at 0x000002294D374A00>\nJhon\n"
-     ]
-    }
-   ],
-   "source": [
-    "# class variables:\n",
-    "print(Human.population)\n",
-    "print(Human.id_seq)\n",
-    "# before overriding __repr__ magic function\n",
-    "print(Human.database)\n",
-    "print(Human.database[0])\n",
-    "print(Human.database[1].name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0, soikat, 22, True]\n[[0, soikat, 22, True], [1, Jhon, 69, True]]\n[0, soikat, 22, True]\nJhon\n['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'database', 'die', 'id_seq', 'intro', 'population']\n"
+      "[<class '__main__.Human'>({'name': 'soikat', 'age': 22, 'is_alive': True, 'id': 0}), <class '__main__.Human'>({'name': 'Jhon', 'age': 69, 'is_alive': True, 'id': 1})]\n\nHuman [0, soikat, 22, True]\nHuman [0, soikat, 22, True]\nHuman [0, soikat, 22, True]\nother magic methods: \n['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'database', 'die', 'id_seq', 'intro', 'population']\n"
      ]
     }
    ],
    "source": [
     "# after overriding __repr__ magic function\n",
-    "print(h1)\n",
+    "h1 = Human(\"soikat\",22)\n",
+    "h2 = Human(\"Jhon\",69)\n",
+    "# __repr__\n",
     "print(Human.database)\n",
+    "print()\n",
+    "# __str__\n",
+    "print(h1)\n",
+    "print(str(h1))\n",
     "print(Human.database[0])\n",
-    "print(Human.database[1].name)\n",
-    "print(dir(Human))"
+    "\n",
+    "\n",
+    "print(\"other magic methods: \\n\"+str(dir(Human)))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 24
-    }
-   ],
    "source": [
-    "h1.is_alive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "soikat is dying\n"
-     ]
-    }
+    "### Comparing Objects"
    ],
-   "source": [
-    "h1.die()"
-   ]
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 26
-    }
-   ],
+   "outputs": [],
    "source": [
-    "h1.is_alive"
+    "class Point():\n",
+    "    def __init__(self,x,y):\n",
+    "        self.x=x\n",
+    "        self.y=y\n",
+    "    \n",
+    "    def __eq__(self,other):\n",
+    "        return self.x==other.x and self.y==other.y\n",
+    "\n",
+    "    def __gt__(self,other):\n",
+    "        return self.x > other.x and self.y>other.y   \n",
+    "\n",
+    "    def __add__(self,o):\n",
+    "        return Point(self.x+o.x,self.y+o.y)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"Point({self.x} , {self.y})\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "soikat is already dead\n"
+      "True\nTrue\nPoint(2 , 4)\n"
      ]
     }
    ],
    "source": [
-    "h1.die()"
+    "p1= Point(1,2)\n",
+    "p2= Point(1,2)\n",
+    "p3= Point(10,3)\n",
+    "\n",
+    "print(p1==p2)\n",
+    "print(p3>p1)\n",
+    "print(p1+p2)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 28
-    }
-   ],
    "source": [
-    "Human.population"
+    "### Custom containers"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FreqCount():\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.d={}\n",
+    "\n",
+    "    def add(self,v):\n",
+    "        self.d[v.lower()] = self.d.get(v.lower(),0) + 1\n",
+    "\n",
+    "    def __getitem__(self,v):\n",
+    "        return self.d.get(v.lower(),0)\n",
+    "\n",
+    "    def __setitem__(self,v,count):\n",
+    "        self.d[v.lower()] = count\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.d)\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return iter(self.d)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"FC ({self.d})\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'database', 'die', 'id_seq', 'intro', 'population']\n"
+      "3\n2\nFC ({'python': 3, 'c++': 10})\n\npython -> 3\nc++ -> 10\n"
      ]
     }
    ],
    "source": [
-    "print(dir(Human))"
+    "\n",
+    "fc = FreqCount()\n",
+    "fc.add(\"python\")\n",
+    "fc.add(\"Python\")\n",
+    "fc.add(\"python\")\n",
+    "# print(fc.d) instead use __getitem__\n",
+    "print(fc[\"python\"])\n",
+    "# using __setitem__ instead of fc.d[\"c++\"]\n",
+    "fc[\"c++\"] = 10\n",
+    "# __len__\n",
+    "print(len(fc))\n",
+    "# __str__\n",
+    "print(fc)\n",
+    "print()\n",
+    "# __iter__\n",
+    "for i in fc:\n",
+    "    print(i,\"->\",fc[i])\n"
    ]
   },
   {
