--- a/Py/09OOP/py_oop_basic.ipynb
+++ b/Py/09OOP/py_oop_basic.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.8.10 64-bit ('base': conda)"
   },
   "interpreter": {
    "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
@@ -26,7 +26,7 @@
  "cells": [
   {
    "source": [
-    "# Basic OOP in python"
+    "# OOP in python"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -75,7 +75,6 @@
     "    population = 0\n",
     "    id_seq = 0\n",
     "\n",
-    "    # constructor\n",
     "    def __init__(self,name,age,is_alive = True):\n",
     "        # instance variables\n",
     "        self.name = name\n",
@@ -632,14 +631,7 @@
     "\n",
     "```python\n",
     "class ChildClassName(ParentClassName)\n",
-    "```\n",
-    "\n",
-    "## Polymorphism\n",
-    "\n",
-    "- One function Name can have different functionality.\n",
-    "\n",
-    "**Function overriding** - If derived class defines same function in it's base class, it known as function overriding. This is used to achieve Polymorphism.\n",
-    "\n"
+    "```"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -775,11 +767,361 @@
    ]
   },
   {
+   "source": [
+    "### Method Overriding with super()\n",
+    "\n",
+    "The `super()` builtin returns a proxy object (temporary object of the superclass) that allows us to access methods of the base class.\n",
+    "\n",
+    "In Python, `super()` has two major use cases:\n",
+    "\n",
+    "- Allows us to avoid using the base class name explicitly\n",
+    "- Working with Multiple Inheritance"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Mammal constructor\nAnimal constructor\n1\n2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal():\n",
+    "    def __init__(self):\n",
+    "        print(\"Animal constructor\")\n",
+    "        self.age = 1\n",
+    "    \n",
+    "   \n",
+    "class Mammal(Animal):\n",
+    "    def __init__(self):\n",
+    "        print(\"Mammal constructor\")\n",
+    "        self.weight = 2\n",
+    "        super().__init__()\n",
+    "    \n",
+    "m = Mammal()\n",
+    "print(m.age)\n",
+    "print(m.weight)"
+   ]
+  },
+  {
+   "source": [
+    "### Multiple Inheritance"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Employee greeting...\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    def greet(self):\n",
+    "        print(\"Employee greeting...\")\n",
+    "\n",
+    "class Person:\n",
+    "    def greet(self):\n",
+    "        print(\"Person greeting...\")\n",
+    "\n",
+    "\n",
+    "class Manager(Employee,Person):\n",
+    "    pass\n",
+    "\n",
+    "m = Manager()\n",
+    "m.greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Person greeting...\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Manager(Person, Employee):\n",
+    "    pass\n",
+    "\n",
+    "m = Manager()\n",
+    "m.greet()"
+   ]
+  },
+  {
+   "source": [
+    "## Abstract Base Classes\n",
+    "\n",
+    "> lets build a class:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InvalidOperationError(Exception):\n",
+    "    pass\n",
+    "\n",
+    "class Stream:\n",
+    "    def __init__(self):\n",
+    "        self.opened = False\n",
+    "    \n",
+    "    def open(self):\n",
+    "        if self.opened:\n",
+    "            raise InvalidOperationError(\"Stream is Already opened\")\n",
+    "        self.opened = True\n",
+    "    \n",
+    "    def close(self):\n",
+    "        if self.opened:\n",
+    "            raise InvalidOperationError(\"Stream is Already opened\")\n",
+    "        self.opened = True\n",
+    "\n",
+    "class FileStream(Stream):\n",
+    "    def read(self):\n",
+    "        print(\"Reading data from a file\")\n",
+    "    \n",
+    "\n",
+    "class NetworkStream(Stream):\n",
+    "    def read(self):\n",
+    "        print(\"Reading data from a network\")\n"
+   ]
+  },
+  {
+   "source": [
+    "**Whats wrong with below code:::**\n",
+    "\n",
+    "```py\n",
+    "stream = Stream()\n",
+    "print(stream.opened)\n",
+    "stream.open()\n",
+    "print(stream.opened)\n",
+    "```\n",
+    "\n",
+    "We should not allow `Stream()` class to be instantiated as above beacuse `Stream()` is abstruct idea... we don't know what type of stream we are talking about?? is it  `FileStream` or `NetworkStream`\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC,abstractmethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class InvalidOperationError(Exception):\n",
+    "    pass\n",
+    "\n",
+    "class Stream(ABC):\n",
+    "    def __init__(self):\n",
+    "        self.opened = False\n",
+    "    \n",
+    "    def open(self):\n",
+    "        if self.opened:\n",
+    "            raise InvalidOperationError(\"Stream is Already opened\")\n",
+    "        self.opened = True\n",
+    "    \n",
+    "    def close(self):\n",
+    "        if self.opened:\n",
+    "            raise InvalidOperationError(\"Stream is Already opened\")\n",
+    "        self.opened = True\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def read(self):\n",
+    "        pass\n",
+    "\n",
+    "class FileStream(Stream):\n",
+    "    def read(self):\n",
+    "        print(\"Reading data from a file\")\n",
+    "    \n",
+    "\n",
+    "class NetworkStream(Stream):\n",
+    "    def read(self):\n",
+    "        print(\"Reading data from a network\")\n"
+   ]
+  },
+  {
+   "source": [
+    "> abstruct class can't be instantiated"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "Can't instantiate abstract class Stream with abstract methods read",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-1456ce223969>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstream\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mStream\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mstream\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Can't instantiate abstract class Stream with abstract methods read"
+     ]
+    }
+   ],
+   "source": [
+    "stream = Stream()\n",
+    "stream.open()"
+   ]
+  },
+  {
+   "source": [
+    "> Also we now  must implement `read()` method"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "Can't instantiate abstract class MemoryStream with abstract methods read",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-e4845ed35a73>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mmem\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMemoryStream\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: Can't instantiate abstract class MemoryStream with abstract methods read"
+     ]
+    }
+   ],
+   "source": [
+    "class MemoryStream(Stream):\n",
+    "    pass\n",
+    "\n",
+    "mem = MemoryStream()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MemoryStream(Stream):\n",
+    "    def read():\n",
+    "        print(\"Memory Stream\")\n",
+    "\n",
+    "mem = MemoryStream()\n",
+    "mem.open()\n",
+    "print(mem.opened)"
+   ]
+  },
+  {
+   "source": [
+    "## Polymorphism\n",
+    "\n",
+    "- One function Name can have different functionality.\n",
+    "\n",
+    "**Function overriding** - If derived class defines same function in it's base class, it known as function overriding. This is used to achieve Polymorphism."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC,abstractmethod\n",
+    "\n",
+    "class UIControl(ABC):\n",
+    "    @abstractmethod\n",
+    "    def draw(self):\n",
+    "        pass\n",
+    "\n",
+    "class TextBox(UIControl):\n",
+    "    def draw(self):\n",
+    "        print(\"TextBox...\")\n",
+    "\n",
+    "class DropDownList(UIControl):\n",
+    "    def draw(self):\n",
+    "        print(\"DropDownList....\")\n",
+    "    \n",
+    "\n",
+    "def draw(controls):\n",
+    "    for c in controls:\n",
+    "        c.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "DropDownList....\nTextBox...\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "ddl = DropDownList()\n",
+    "txtbx = TextBox()\n",
+    "\n",
+    "draw([ddl,txtbx])"
+   ]
   }
  ]
 }
