--- a/Py/06dictionaries/dictionaries.ipynb
+++ b/Py/06dictionaries/dictionaries.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.8.10 64-bit ('base': conda)"
   },
   "interpreter": {
    "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
@@ -307,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[0, 2, 4, 6, 8]\n[0, 2, 4, 6]\n\n{0: 0, 1: 2, 2: 4, 3: 6}\n['Jhon', 'pass', 191]\n['name', 'pass', 'id']\nname-pass-id\n"
+      "[0, 2, 4, 6, 8]\n[0, 2, 4, 6]\n\n{0: 0, 1: 2, 2: 4, 3: 6}\n['Jhon', 'pass', 191]\n['name', 'pass', 'id']\nname-pass-id\n\n{'c': 3, 'd': 4}\n{'cc': 6, 'dc': 8, 'ec': 10}\n"
      ]
     }
    ],
@@ -348,7 +348,18 @@
     "\n",
     "print(values)\n",
     "print(keys)\n",
-    "print(keys_str)"
+    "print(keys_str)\n",
+    "\n",
+    "print()\n",
+    "#Creating a new dictionary with only pairs where the value is larger than 2\n",
+    "d = {'a': 1, 'b': 2, 'c': 3, 'd': 4}\n",
+    "new_dict = {k:v for k, v in d.items() if v > 2}\n",
+    "print(new_dict)\n",
+    "\n",
+    "#We can also perform operations on the key value pairs\n",
+    "d = {'a':1,'b':2,'c':3,'d':4,'e':5}\n",
+    "d = {k + 'c':v * 2 for k, v in d.items() if v > 2}\n",
+    "print(d)"
    ]
   },
   {
