--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "source": [
     "l = [1,2,3,4,5,6]\r\n",
     "# creating a new list of squares of each element\r\n",
@@ -621,14 +621,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "source": [
     "l =[1,2,3,4,5,6,7,8]\r\n",
     "# filtering even elements\r\n",
     "filtered = [i for i in l if i % 2==0]\r\n",
     "print(filtered)\r\n",
+    "# for i in l:\r\n",
+    "# \tif(i%2==0):\r\n",
+    "# \t\tprint(i)\r\n",
     "\r\n",
     "# (If you're familiar with SQL, you might think of this as being like a \"WHERE\" clause)\r\n",
+    "\r\n",
+    "filtered = [i**2 for i in l if i % 2 == 0]\r\n",
+    "print(filtered)\r\n",
+    "# new_l=[]\r\n",
+    "# for i in l:\r\n",
+    "# \tif(i%2==0):\r\n",
+    "# \t\tnew_l.append(i**2)\r\n",
+    "\r\n",
+    "# VS->\r\n",
+    "# else block in this case is must\r\n",
+    "filtered = [i**2 if i % 2 == 0 else i**3 for i in l] \r\n",
+    "print(filtered)\r\n",
+    "# new_l=[]\r\n",
+    "# for i in l:\r\n",
+    "# \tif(i%2==0):\r\n",
+    "# \t\tnew_l.append(i**2)\r\n",
+    "# \telse:\r\n",
+    "# \t\tnew_l.append(i**3)\r\n",
     "\r\n",
     "print()\r\n",
     "# removing empty string from the list\r\n",
@@ -642,6 +663,8 @@
      "name": "stdout",
      "text": [
       "[2, 4, 6, 8]\n",
+      "[4, 16, 36, 64]\n",
+      "[1, 4, 27, 16, 125, 36, 343, 64]\n",
       "\n",
       "['A', 'B', 'C']\n"
      ]
@@ -875,6 +898,78 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 2D lists"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "A = [[1,2],\r\n",
+    "\t[3,4]]\r\n",
+    "\r\n",
+    "B = [[2,3],\r\n",
+    "\t[1,1]]\r\n",
+    "\r\n",
+    "C = [[None,None],[None,None]]\r\n",
+    "for i in range(2):\r\n",
+    "\tfor j in range(2):\r\n",
+    "\t\tC[i][j] = A[i][j] + B[i][j] \r\n",
+    "\r\n",
+    "print(C)\r\n",
+    "print(C[1][1])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[3, 5], [4, 5]]\n",
+      "5\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## More on Lists"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "print([1]*5)\r\n",
+    "print([[None]*2]*2)\r\n",
+    "# List having multiple ref\r\n",
+    "l=[1,2,3,4]\r\n",
+    "ref = l.copy()\r\n",
+    "ref.append(6)\r\n",
+    "\r\n",
+    "print(l)\r\n",
+    "print(ref)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 1, 1, 1, 1]\n",
+      "[[None, None], [None, None]]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4, 6]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Examples"
    ],
    "metadata": {}
@@ -1100,6 +1195,47 @@
       "\n",
       "found at : [0, 3]\n",
       "{'casino': 3}\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### ex4 - Rotation of a List\r\n",
+    "\r\n",
+    "Right Rotation is defined as :\r\n",
+    "\r\n",
+    "```bash\r\n",
+    "[1,2,3,4,5,6] ---> (1 right rotation) ---> [6,1,2,3,4,5]\r\n",
+    "[1,2,3,4,5,6] ---> (2 right rotation) ---> [5,6,1,2,3,4]\r\n",
+    "```"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "lst = [3,5,2,7,8,9]\r\n",
+    "steps=4\r\n",
+    "n=len(lst)\r\n",
+    "\r\n",
+    "key=lst[-1]\r\n",
+    "\r\n",
+    "for i in range(n-1, 0, -1):  # range(start, stop[, step])\r\n",
+    "\tlst[i] = lst[i-1]\r\n",
+    "\r\n",
+    "lst[0]=key\r\n",
+    "print(lst)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[9, 3, 5, 2, 7, 8]\n"
      ]
     }
    ],
