--- a/Py/04tuples/tuples.ipynb
+++ b/Py/04tuples/tuples.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.8.10 64-bit ('base': conda)"
   },
   "interpreter": {
    "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
@@ -25,6 +25,7 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
    "source": [
     "# Tuples\n",
     "\n",
@@ -34,13 +35,46 @@
     "- immutable\n",
     "- faster then lists"
    ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
+   "source": [
+    "## creating empty tuple"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "source": [
+    "t = ()\r\n",
+    "t = tuple()\r\n",
+    "type(t)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "# Heterogenous elements\r\n",
+    "tup = (1,2,\"Hello\",33)\r\n",
+    "print(tup)\r\n",
+    "type(tup)"
+   ],
    "outputs": [
     {
      "output_type": "stream",
@@ -57,37 +91,79 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 10
     }
    ],
-   "source": [
-    "tup = (1,2,\"Hello\",33)\n",
-    "print(tup)\n",
-    "type(tup)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 6,
+   "source": [
+    "# for one element : only paranthesis is not enough\r\n",
+    "t = ('mohit')\r\n",
+    "print(type(t))\r\n",
+    "# for one element : comma is mandatory\r\n",
+    "t = ('mohit',)\r\n",
+    "print(type(t))\r\n",
+    "\r\n"
+   ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1\n(1, 2, 'Hello')\n"
+      "<class 'str'>\n",
+      "<class 'tuple'>\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "print(tup[0])\n",
-    "print(tup[:-1])"
-   ]
+    "## Access elements in tuples"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "print(tup[0])\r\n",
+    "print(tup[-1])\r\n",
+    "print(tup[:-1])\r\n",
+    "print(tup[:])\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n",
+      "33\n",
+      "(1, 2, 'Hello')\n",
+      "(1, 2, 'Hello', 33)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Changing a Tuple"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "source": [
+    "# But this is not possible because of immutability\r\n",
+    "tup[0] = 1"
+   ],
    "outputs": [
     {
      "output_type": "error",
@@ -101,17 +177,27 @@
      ]
     }
    ],
-   "source": [
-    "# But this is not posible because of immutability\n",
-    "tup[0] = 1"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 11,
+   "source": [
+    "l=['A','B','C']\r\n",
+    "tup=(1,2,l,(1,2,3),100)\r\n",
+    "tup[2][2]='X'\r\n",
+    "print(tup)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(1, 2, ['A', 'B', 'X'], (1, 2, 3), 100)\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ]
 }
